# roadrunner-fork

./: launch_tuner.sh  pyproject.toml  requirements.txt
docker/: Dockerfile
gemma2/: gemma2_lorax.ipynb  gemma2_train.ipynb  gemma2_train.py  simplenn_sharding.ipynb  simplenn_sharding.py
gemma2/trainer_engine/: model_pipeline.py  setup.py  training_pipeline.py  utils.py
llama3.1_jax/: llama3.1_train.ipynb  llama3.1_train.py
llama3.1_jax/trainer_engine/: auto_lib.py  checkpoint_lib.py  llama_model.py  training_pipeline.py  utils.py
llama3_jax/: llama_chat.py  llama_train_notebook.ipynb  mnist.py  multihost_trainer.py  rocm_smi_logs.csv  simple_train.py  train.py  train2.py
llama3_jax/trainer_engine/: automodel_lib.py  checkpoint_lib.py  jax_utils.py  llama_model.py  trainer_lib.py
misc/scripts/: multihost.sh
misc/tests/: rocm_smi_logs_2048seqlen.csv  rocm_smi_logs_error2.csv  rocm_smi_logs_gradual_jit_8b.csv
misc/tests/multinode/: add.py  example.py  mnist.py  mnist2.py  shadd.py  simple.py
src/felafax/trainer_engine/: checkpoint.py  setup.py  trainer.py  trainer_torch_xla.py
src/felafax/trainer_engine/models/llama3/jax/: model.py
trainers/aws_trainium/: model.py  pipeline.py
trainers/cli_tuner/: config.py  config.yaml  pipeline.py
trainers/llama3_alpaca_finetune/: pipeline.py
trainers/llama3_jaison/: config.py  config.yaml
trainers/llama3_medqa/: pipeline.py
trainers/torch_xla/: pipeline.py
trainers/torch_xla_mnist/: pipeline.py
trainers/torch_xla_trainer/: trainer_torch_xla.py
~archive/llama3_pytorch_xla/: llama3_70b_train.ipynb  llama3_8b_train.ipynb
~archive/llama3_pytorch_xla/checkpoints/: checkpoint.pt
