# Copyright 2024 Felafax AI
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#      https://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "felafax"
version = "1.0.12"
description = "felafax"
readme = "README.md"
requires-python = ">=3.10"
urls.Homepage = "https://github.com/felafax/felafax"
urls.Repository = "https://github.com/felafax/felafax"
urls.Documentation = "https://github.com/felafax/felafax"
urls.Bug-Tracker = "https://github.com/felafax/felafax/issues"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["felafax*"]

[tool.setuptools]
dependency-links = ["https://download.pytorch.org/whl/cpu"]

[tool.ruff]
line-length = 81
indent-width = 4

[tool.ruff.lint]
ignore = ["C901", "E741", "F402", "F823", "E731"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.lint.select]
select = ["C", "E", "F", "I", "W"]

exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.lint.isort]
lines-after-imports = 2